rsbc_df_vips_adapter_gateway/networking_deploy_dev.yml
apiVersion: v1
kind: Service
metadata:
  name: vipsirp-api-service
  namespace: be5301-dev
spec:
  type: ExternalName
  externalName: digitalforms-viirp-api-svc.c220ad-dev.svc.cluster.local
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ride-vips-adapter-rev-proxy
  name: ride-vips-adapter-rev-proxy
  namespace: be5301-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ride-vips-adapter-rev-proxy
  strategy: {}
  template:
    metadata:
      labels:
        app: ride-vips-adapter-rev-proxy
    spec:
      containers:
      - name: nginx-log-exporter
        image: image-registry.apps.silver.devops.gov.bc.ca/be5301-dev/nginx-log-exporter:1.0
        args: ["-config-file", "/etc/prometheus-nginxlog-exporter/config.hcl"]
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - name: nginx-log
          containerPort: 4040
        volumeMounts:
        - name: logvol
          mountPath: "/var/log/nginx/vipsadapter"
        - name: exporter-config
          mountPath: /etc/prometheus-nginxlog-exporter
      - name: nginx-exporter
        image: image-registry.apps.silver.devops.gov.bc.ca/be5301-dev/nginx-prometheus-exporter:1.0
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - name: nginx-ex-port
          containerPort: 9113
        args:
          - -nginx.scrape-uri=http://localhost:8087/metrics
      - image: image-registry.openshift-image-registry.svc:5000/be5301-dev/busybox:latest-stable
        name: accesslogs
        volumeMounts:
        - name: logvol
          mountPath: "/tmp"
        args:
        - /bin/sh
        - -c
        - "tail -f /tmp/access.log"
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/access.log
          initialDelaySeconds: 50
          periodSeconds: 5
          failureThreshold: 10
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          exec:
            command:
            - cat
            - /tmp/access.log
          initialDelaySeconds: 80
          periodSeconds: 5
          failureThreshold: 10
          successThreshold: 1
          timeoutSeconds: 10
      - image: image-registry.openshift-image-registry.svc:5000/be5301-dev/busybox:latest-stable
        name: errorlogs
        volumeMounts:
        - name: logvol
          mountPath: "/tmp"
        args:
        - /bin/sh
        - -c
        - "tail -f /tmp/error.log"
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/access.log
          initialDelaySeconds: 50
          periodSeconds: 5
          failureThreshold: 10
          successThreshold: 1
          timeoutSeconds: 10
      - image: image-registry.openshift-image-registry.svc:5000/be5301-dev/ride-vips-adapter-nginx-rev-proxy-image:1
        name: ride-vips-adapter-rev-proxy
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: nginxvol
          mountPath: "/tmp"
        - name: logvol
          mountPath: /var/opt/rh/rh-nginx120/log/nginx
        ports:
        - containerPort: 80
        - containerPort: 8080
        - containerPort: 8082
        - containerPort: 5000
        - containerPort: 81
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          failureThreshold: 5
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 35
          periodSeconds: 15
          failureThreshold: 5
          successThreshold: 1
          timeoutSeconds: 10
        startupProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: nginxvol
        configMap:
          name: vipsgatewaynginxconfig
      - name: logvol
        emptyDir: {}
      - name: exporter-config
        configMap:
          name: logexporterconfig

---

kind: Service
apiVersion: v1
metadata:
  name: ride-vips-nginx-proxy-cluster-ip
  namespace: be5301-dev
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
      name: tcp1
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: ride-vips-adapter-rev-proxy

---

kind: Service
apiVersion: v1
metadata:
  name: ride-vips-nginx-proxy-cluster-ip-2
  namespace: be5301-dev
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8087
      name: tcp1
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: ride-vips-adapter-rev-proxy

---

kind: Service
apiVersion: v1
metadata:
  name: ride-vips-nginx-proxy-cluster-ip-log-exporter
  namespace: be5301-dev
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4040
      name: tcp1
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: ride-vips-adapter-rev-proxy

---

kind: Service
apiVersion: v1
metadata:
  name: ride-vips-nginx-proxy-nginx-exporter-cluster-svc
  namespace: be5301-dev
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9113
      name: tcp1
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: ride-vips-adapter-rev-proxy

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ride-vips-gateway-adapter
  namespace: be5301-dev
spec:
  to:
    kind: Service
    name: ride-vips-nginx-proxy-cluster-ip
    weight: 100
  port:
    targetPort: 8083
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ride-vips-gateway-adapter-nginx-exporter
  namespace: be5301-dev
spec:
  to:
    kind: Service
    name: ride-vips-nginx-proxy-nginx-exporter-cluster-svc
    weight: 100
  port:
    targetPort: 9113
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ride-vips-gateway-adapter-metrics
  namespace: be5301-dev
spec:
  to:
    kind: Service
    name: ride-vips-nginx-proxy-cluster-ip-2
    weight: 100
  port:
    targetPort: 8087
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
