rsbc_df_vips_adapter_gateway/networking_deploy_test.yml
apiVersion: v1
kind: Service
metadata:
  name: vipsirp-api-service
  namespace: be5301-test
spec:
  type: ExternalName
  externalName: digitalforms-viirp-api-svc.c220ad-dev.svc.cluster.local
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ride-vips-adapter-rev-proxy
  name: ride-vips-adapter-rev-proxy
  namespace: be5301-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ride-vips-adapter-rev-proxy
  strategy: {}
  template:
    metadata:
      labels:
        app: ride-vips-adapter-rev-proxy
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/be5301-dev/ride-vips-adapter-nginx-rev-proxy-image:1
        name: ride-vips-adapter-rev-proxy
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: nginxvol
          mountPath: "/tmp"
        ports:
        - containerPort: 80
        - containerPort: 8080
        - containerPort: 8082
        - containerPort: 5000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: nginxvol
        configMap:
          name: vipsgatewaynginxconfig

---

kind: Service
apiVersion: v1
metadata:
  name: ride-vips-nginx-proxy-cluster-ip
  namespace: be5301-test
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
      name: tcp1
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: ride-vips-adapter-rev-proxy

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ride-vips-gateway-adapter
  namespace: be5301-test
spec:
  to:
    kind: Service
    name: ride-vips-nginx-proxy-cluster-ip
    weight: 100
  port:
    targetPort: 8083
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
